bk_ida/gccida/g0/global_conflicts
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_conflicts/src/global.c:1121:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+30h] [rbp-60h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_conflicts/src/global.c:1129:20: error: expected identifier or '('
unsigned __int64 *(short *)0x; // [rsp+60h] [rbp-30h] 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_conflicts/src/global.c:1129:20: error: expected ')'
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_conflicts/src/global.c:1129:19: note: to match this '('
unsigned __int64 *(short *)0x; // [rsp+60h] [rbp-30h] 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_conflicts/src/global.c:1130:16: error: expected identifier or '('
unsigned int *(short *)0xnum_; // [rsp+68h] [rbp-28h] 
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_conflicts/src/global.c:1130:16: error: expected ')'
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_conflicts/src/global.c:1130:15: note: to match this '('
unsigned int *(short *)0xnum_; // [rsp+68h] [rbp-28h] 
              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_conflicts/src/global.c:1149:12: error: invalid suffix 'xnum_' on integer constant
*(short *)0xnum_ = 0; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_conflicts/src/global.c:1153:12: error: invalid suffix 'xnum_' on integer constant
*(short *)0xnum_ = 0; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_conflicts/src/global.c:1157:20: error: invalid suffix 'xnum_' on integer constant
while ( *(short *)0xnum_ <= 1 ) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_conflicts/src/global.c:1159:12: error: invalid suffix 'x' on integer constant
*(short *)0x = ptr_->bits[*(short *)0xnum_]; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_conflicts/src/global.c:1159:38: error: invalid suffix 'xnum_' on integer constant
*(short *)0x = ptr_->bits[*(short *)0xnum_]; 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_conflicts/src/global.c:1160:17: error: invalid suffix 'x' on integer constant
if ( *(short *)0x ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_conflicts/src/global.c:1164:40: error: invalid suffix 'x' on integer constant
if ( ( ( 1LL << bit_num_) & *(short *)0x) != 0 ) 
                                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_conflicts/src/global.c:1166:12: error: invalid suffix 'x' on integer constant
*(short *)0x &= ~( 1LL << bit_num_); 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_conflicts/src/global.c:1167:37: error: invalid suffix 'xnum_' on integer constant
i = ( ( 2 * ptr_->indx + *(short *)0xnum_) << 6) + bit_num_; 
                                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_conflicts/src/global.c:1173:25: error: use of undeclared identifier 'machine_mode'
mark_reg_live_nc( aa, ( machine_mode)*( ( unsigned __int8 *)cfun->emit->x_regno_reg_rtx[i] + 2)); 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_conflicts/src/global.c:1181:18: error: invalid suffix 'x' on integer constant
if ( !*(short *)0x ) 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_conflicts/src/global.c:1188:14: error: invalid suffix 'xnum_' on integer constant
++*(short *)0xnum_; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_conflicts/src/global.c:1190:12: error: invalid suffix 'xnum_' on integer constant
*(short *)0xnum_ = 0; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_conflicts/src/global.c:1208:53: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( link = insn[3].fld[0].rtx; link; link = ( rtx)link[1] ) 
                                                    ^~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_conflicts/src/obj/global.o] Error 1
